--- a/test/SConscript
+++ b/test/SConscript
@@ -68,3 +68,23 @@ if env.get('MYLIB'):
 env.Program('test-mem', source,
             CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libcmocka/include',
             LINKFLAGS='$LINKFLAGS $USER')
+
+
+
+source = [
+    'test-uncompress.c',
+    '../libzlib/libzlib.a',
+    '../liblz4/liblz4.a',
+    '../libuuid/libuuid.a',
+    '../libcmocka/libcmocka.a',
+]+env['LIBC']
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+
+cflags=''
+
+env.Program('test-uncompress', source,
+            CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libcmocka/include -Iapp/libzlib/',
+            LINKFLAGS='$LINKFLAGS $USER')
