--- a/test/SConscript
+++ b/test/SConscript
@@ -88,3 +88,19 @@ cflags=''
 env.Program('test-uncompress', source,
             CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libcmocka/include -Iapp/libzlib/',
             LINKFLAGS='$LINKFLAGS $USER')
+
+
+source = [
+    'test-string.c',
+    '../libcmocka/libcmocka.a',
+]+env['LIBC']
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+
+cflags=''
+
+env.Program('test-string', source,
+            CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libcmocka/include ',
+            LINKFLAGS='$LINKFLAGS $USER')
