--- a/cmd/SConscript
+++ b/cmd/SConscript
@@ -62,3 +62,15 @@ if env.get('MYLIB'):
 env.Program('hexdump', source,
     CFLAGS='$CFLAGS $LIBCFLAGS ',
     LINKFLAGS= '$LINKFLAGS $USER')
+
+
+source=[
+    'touch.c',
+    ]+env['LIBC']
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+env.Program('touch', source,
+    CFLAGS='$CFLAGS $LIBCFLAGS ',
+    LINKFLAGS= '$LINKFLAGS $USER')
