--- a/libsdl2/SConscript
+++ b/libsdl2/SConscript
@@ -48,7 +48,7 @@ source+=Glob('src/thread/*.c')
 source+=Glob('src/thread/generic/*.c')
 # source+=Glob('src/thread/pthread/*.c')
 source+=Glob('src/timer/*.c')
-source+=Glob('src/timer/dummy/*.c')
+source+=Glob('src/timer/yiyiya/*.c')
 source+=Glob('src/video/*.c')
 source+=Glob('src/video/yiyiya/*.c')
 source+=Glob('src/video/yuv2rgb/*.c')
