--- a/gui/SConscript
+++ b/gui/SConscript
@@ -9,18 +9,21 @@ import os
 Import('env')
 
 source=[
-    'main.c',
-    '../libgui/libgui.a',
-    '../libgui/libimage.a',
-    '../libjpeg/libjpeg.a',
-    '../libpng/libpng.a',
-    '../libzlib/libzlib.a',
-    ]+env['LIBC']
+    'main.c'
+    ]
 
-if env.get('MYLIB'):
-    source.append(env.get('MYLIB'))
+
+libs=[
+    'libgui.a',
+    'libimage.a',
+    'libjpeg.a',
+    'libpng.a',
+    'libzlib.a',
+    'libc.a'
+]
 
 env.Program('gui', source,
+    LIBS=env.get('LIBS')+libs,
     CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libgui/ -Iapp/libjpeg',
     LINKFLAGS= '$LINKFLAGS $USER')
 
