--- a/quickjs/SConscript
+++ b/quickjs/SConscript
@@ -9,79 +9,76 @@ import os
 Import('env')
 
 
-cflags=' -DUSE_FILE32API -DCONFIG_BIGNUM -Iapp/quickjs '
+cflags = ' -DUSE_FILE32API -DCONFIG_BIGNUM -Iapp/quickjs '
 
 
 env.Library('quickjs', [
-   'quickjs.c',
-   'libregexp.c',
-   'libunicode.c',
-   'cutils.c',
-   'quickjs-libc.c',
-   'libbf.c',
+    'quickjs.c',
+    'libregexp.c',
+    'libunicode.c',
+    'cutils.c',
+    'quickjs-libc.c',
+    'libbf.c',
 
-]+env['LIBC'],CFLAGS='$CFLAGS $LIBCFLAGS '+cflags)
+], CFLAGS='$CFLAGS $LIBCFLAGS '+cflags)
 
 
 # ./qjsc -c -o /repl.c -m repl.js ./qjsc -fbignum -c -o /qjscalc.c qjscalc.js
-source=[]
+source = []
 
-source+=[
+source += [
     'qjsc.c',
 ]
 
-source+= [
-    '../quickjs/libquickjs.a',
-    '../libsdl2/libsdl2.a',
-    '../libgui/libgui.a',
-    '../libgui/libimage.a',
-    '../libpng/libpng.a',
-    '../libzlib/libzlib.a',
-    ]+env['LIBC']
-    
-if env.get('MYLIB'):
-    source.append(env.get('MYLIB'))
+
+libs = [
+    'libquickjs.a',
+    'libsdl2.a',
+    'libgui.a',
+    'libimage.a',
+    'libpng.a',
+    'libzlib.a',
+]
+
+libpath = [
+    '../../eggs/libsdl2/',
+    '../../eggs/libsdl2-image/',
+    '../../eggs/libsdl2-ttf/',
+    '../../eggs/libfreetype',
+
+    '../../eggs/libwebp/',
+]
+
 
 env.Program('qjsc', source,
-    CFLAGS='$CFLAGS $LIBCFLAGS  -Iapp/libgui/ -Iapp/libzlib/ -Iapp/libpng -Iapp/libjpeg -Iapp/libsdl2/ -Iapp/libsdl2/include '+cflags,
-    LINKFLAGS= '$LINKFLAGS $USER')
+            LIBS=libs+env.get('LIBS'),
+            LIBPATH=env.get('LIBPATH')+libpath,
+
+            CFLAGS='$CFLAGS $LIBCFLAGS  '+cflags,
+            LINKFLAGS='$LINKFLAGS $USER')
 
 
+source = []
 
-source=[]
-
-source+=[
+source += [
     'qjs.c',
 ]
 
-if env['ARCHTYPE']=='arm':
-    source+=[
+if env['ARCHTYPE'] == 'arm':
+    source += [
         'arm/qjscalc.c',
         'arm/repl.c'
     ]
-elif env['ARCHTYPE']=='x86':
-    source+=[
+elif env['ARCHTYPE'] == 'x86':
+    source += [
         'i386/qjscalc.c',
         'i386/repl.c'
     ]
 
-source+= [
-    '../quickjs/libquickjs.a',
-    '../libsdl2/libsdl2.a',
-    '../libgui/libgui.a',
-    '../libgui/libimage.a',
-    '../libpng/libpng.a',
-    '../libzlib/libzlib.a',
-    ]+env['LIBC']
-    
-if env.get('MYLIB'):
-    source.append(env.get('MYLIB'))
 
-if env['ARCHTYPE']=='x86':
+if env['ARCHTYPE'] == 'x86':
     env.Program('qjs', source,
-        CFLAGS='$CFLAGS $LIBCFLAGS  -Iapp/libgui/ -Iapp/libzlib/ -Iapp/libpng -Iapp/libjpeg -Iapp/libsdl2/ -Iapp/libsdl2/include '+cflags,
-        LINKFLAGS= '$LINKFLAGS $USER')
-
-
-
-
+                LIBS=libs+env.get('LIBS'),
+                LIBPATH=env.get('LIBPATH')+libpath,
+                CFLAGS='$CFLAGS $LIBCFLAGS '+cflags,
+                LINKFLAGS='$LINKFLAGS $USER')
